update 2.0 added components, type-format, api-query

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <link rel="icon" type="image/svg+xml" href="./public/test-logo.png" />
+    <link
+      href="//db.onlinewebfonts.com/c/37086b994764dba84b2ee0f1083bfeed?family=SB+Sans+Interface"
+      rel="stylesheet"
+      type="text/css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cloud Test Form</title>
   </head>
