update 4.0 added phone-mask, adaptive styles, fixes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" type="image/svg+xml" href="./public/test-logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/test-logo.png" />
     <link
       href="//db.onlinewebfonts.com/c/37086b994764dba84b2ee0f1083bfeed?family=SB+Sans+Interface"
       rel="stylesheet"
